--- a/i3/config
+++ b/i3/config
@@ -21,7 +21,7 @@ floating_modifier $mod
 bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
-#bindsym $mod+Shift+Q kill
+bindsym $mod+s kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
