modified:   i3/config 	modified:   i3/i3status.conf 	modified:   mklinks.sh 	deleted:    setup.sh 	new file:   tmux/tmux.conf 	modified:   zsh/zshrc

--- a/i3/config
+++ b/i3/config
@@ -39,7 +39,7 @@ bindsym $mod+Shift+K move up
 bindsym $mod+Shift+L move right
 
 # split in horizontal orientation
-bindsym $mod+g split b
+bindsym $mod+b split h
 
 # split in vertical orientation
 bindsym $mod+v split v
