--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -16,7 +16,7 @@ ethernet eth0 {
 }
 
 battery 0 {
-	format = "%status %percentage %remaining"
+	format = "%status %percentage"
 	path = "/sys/class/power_supply/BAT1/uevent"
 }
 
