--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -3,31 +3,45 @@ general {
         interval = 1
 }
 
+order += "volume master"
 order += "disk /"
-order += "ethernet eth0"
+order += "ethernet eth"
+order += "wireless wifi"
 order += "battery 0"
 order += "load"
 order += "time"
 
-ethernet eth0 {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+ethernet eth {
+    # if you use %speed, i3status requires root privileges
+    format_up = "E: %ip (%speed)"
+    format_down = "E: down"
+}
+
+wireless wifi {
+    format_up = "W: (%quality at %essid, %bitrate) %ip"
+    format_down = "W: down"
 }
 
 battery 0 {
-	format = "%status %percentage"
-	path = "/sys/class/power_supply/BAT1/uevent"
+    format = "%status %percentage"
+    path = "/sys/class/power_supply/BAT0/uevent"
 }
 
 time {
-	format = "%V %d/%m %H:%M:%S"
+    format = "%V %d/%m %H:%M:%S"
 }
 
 load {
-	format = "%1min"
+    format = "%1min"
 }
 
 disk "/" {
-	format = "%free"
+    format = "%free"
+}
+
+volume master {
+    format = "♪: %volume"
+    device = "default"
+    mixer = "Master"
+    mixer_idx = 0
 }
