--- a/i3/config
+++ b/i3/config
@@ -44,16 +44,13 @@ bindsym $mod+f fullscreen
 #bindsym $mod+o layout default
 
 # toggle tiling / floating
-bindsym $mod+Control+space floating toggle
-
-# change focus between tiling / floating windows
-#bindsym $mod+space focus mode_toggle
+bindsym $mod+g floating toggle
 
 # focus the parent container
-#bindsym $mod+a focus parent
+bindsym $mod+d focus parent
 
 # focus the child container
-#bindcode $mod+d focus child
+bindsym $mod+e focus child
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -72,14 +69,20 @@ bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
 
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+Q restart
+bindsym $mod+Shift+R restart
+
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+E exit
 
-bindsym $mod+Mod1+l resize grow width 10 px or 10 ppt
-bindsym $mod+Mod1+h resize shrink width 10 px or 10 ppt
-bindsym $mod+Mod1+k resize grow height 10 px or 10 ppt
-bindsym $mod+Mod1+j resize shrink height 10 px or 10 ppt
+bindsym $mod+Control+Mod1+l resize grow     width   1 px or 1 ppt
+bindsym $mod+Control+Mod1+h resize shrink   width   1 px or 1 ppt
+bindsym $mod+Control+Mod1+k resize grow     height  1 px or 1 ppt
+bindsym $mod+Control+Mod1+j resize shrink   height  1 px or 1 ppt
+
+bindsym $mod+Mod1+l resize grow     width   5 px or 5 ppt
+bindsym $mod+Mod1+h resize shrink   width   5 px or 5 ppt
+bindsym $mod+Mod1+k resize grow     height  5 px or 5 ppt
+bindsym $mod+Mod1+j resize shrink   height  5 px or 5 ppt
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -90,4 +93,10 @@ bar {
 # Thin borders
 new_window 1pixel
 
-exec feh --bg-scale bg.png
+# Make the currently focused window a scratchpad
+bindsym $mod+minus move scratchpad
+
+# Show the first scratchpad window
+bindsym $mod+period scratchpad show
+
+exec feh --bg-scale ~/.i3/bg.png
