--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -3,28 +3,16 @@ general {
         interval = 1
 }
 
-order += "volume master"
+#order += "volume master"
 order += "disk /"
-order += "ethernet eth"
-order += "wireless wifi"
-order += "battery 0"
+order += "ethernet eno1"
 order += "load"
 order += "time"
 
-ethernet eth {
+ethernet eno1 {
     # if you use %speed, i3status requires root privileges
     format_up = "E: %ip (%speed)"
     format_down = "E: down"
-}
-
-wireless wifi {
-    format_up = "W: (%quality at %essid, %bitrate) %ip"
-    format_down = "W: down"
-}
-
-battery 0 {
-    format = "%status %percentage"
-    path = "/sys/class/power_supply/BAT0/uevent"
 }
 
 time {
@@ -39,9 +27,9 @@ disk "/" {
     format = "%free"
 }
 
-volume master {
-    format = "♪: %volume"
-    device = "default"
-    mixer = "Master"
-    mixer_idx = 0
-}
+#volume master {
+#    format = "♪: %volume"
+#    device = "default"
+#    mixer = "Master"
+#    mixer_idx = 0
+#}
