Fix broken rtorrent.rc

--- a/rtorrent.rc
+++ b/rtorrent.rc
@@ -5,20 +5,37 @@
 directory.default.set = /home/jakob/Downloads/
 session.path.set = /home/jakob/.rtorrent_session/
 
+# Create views
 view.add = Manual
 view.add = RSS
-#view.add = RSS_complete
 
-schedule = watch_directory,5,5,"load.start=/home/jakob/torrents/*.torrent, d.directory.set=/mnt/hdd0/downloads/, d.custom4.set=rss"
+# Set custom4 for RSS downloads
+# View download in RSS view
+# Do not view download in Manual view
+schedule = watch_directory,5,5,"load.start=/home/jakob/torrents/*.torrent, d.directory.set=/mnt/hdd0/downloads/, view.set_visible=RSS, view.set_not_visible=Manual, d.custom4.set=RSS"
 
-schedule = filter_manual,0,1,"view.filter = Manual,d.custom3="
-schedule = filter_rss,0,1,"view.filter = RSS,d.custom4="
-#schedule = filter_rss_complete,0,1,"view.filter = RSS_complete,\"and={d.custom4=,d.complete=}\""
+# Filter views
+view.filter = RSS, false=
 
+# Automatically open new downloads
 method.set_key = event.download.inserted,autoopen,"d.open="
-method.set_key = event.download.opened,manualcustom,"branch=d.custom4=, d.custom4.set=rss, d.custom3.set=manual"
-method.set_key = event.download.finished,tvsort,"branch=d.custom4=, \"d.close=;execute=tvsort,$d.base_path=;d.erase=\", false="
 
+# Define tvsort method
+# Close download
+# Execute tvsort command with download path as argument
+# Erase download
+method.insert = tvsort, simple, "d.close=;execute=tvsort,$d.base_path=;d.erase="
+
+# Run tvsort metod on finished downloads if custom4 is set
+method.set_key = event.download.finished,run_tvsort,"branch=d.custom4=, tvsort="
+
+# Bind keys to views
+# 2 -> Manual
+# 3 -> RSS
 schedule = bind_2,0,0,"ui.bind_key=download_list,2,ui.current_view.set=Manual"
 schedule = bind_3,0,0,"ui.bind_key=download_list,3,ui.current_view.set=RSS"
-#schedule = bind_4,0,0,"ui.bind_key=download_list,4,ui.current_view.set=RSS_complete"
+
+
+# Bandwidth throttles
+throttle_down = 9000
+throttle_up = 1000
