--- a/rtorrent.rc
+++ b/rtorrent.rc
@@ -36,6 +36,10 @@ schedule = bind_2,0,0,"ui.bind_key=download_list,2,ui.current_view.set=Manual"
 schedule = bind_3,0,0,"ui.bind_key=download_list,3,ui.current_view.set=RSS"
 
 
-# Bandwidth throttles
-throttle.down = 9000
-throttle.up = 1000
+# Throttles
+throttle.global_down.max_rate.set = 9000000
+throttle.global_up.max_rate.set = 1000000
+throttle.max_peers.normal.set = 500
+
+# Port range
+network.port_range.set = 13337-13347
