--- a/i3/config
+++ b/i3/config
@@ -39,9 +39,9 @@ bindsym $mod+a split v
 bindsym $mod+f fullscreen
 
 # change container layout (stacked, tabbed, default)
-##bindsym $mod+s layout stacking
-##bindsym $mod+w layout tabbed
-#bindsym $mod+o layout default
+bindsym $mod+z layout default
+bindsym $mod+x layout stacking
+bindsym $mod+c layout tabbed
 
 # toggle tiling / floating
 bindsym $mod+g floating toggle
