--- a/i3/config
+++ b/i3/config
@@ -83,7 +83,7 @@ bindsym $mod+Shift+0 move container to workspace 10
 bindsym $mod+Shift+R restart
 
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+E exit
+bindsym $mod+Control+Mod1+E exit
 
 bindsym $mod+Control+Mod1+l resize grow     width   1 px or 1 ppt
 bindsym $mod+Control+Mod1+h resize shrink   width   1 px or 1 ppt
