--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,3 +6,4 @@ set -g status-right ''
 set -g status-left ''
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg white
+set -sg escape-time 0
