--- a/i3/config
+++ b/i3/config
@@ -21,16 +21,16 @@ bindsym $mod+shift+w kill
 bindsym $mod+space exec dmenu_run
 
 # change focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+bindsym $mod+j focus left
+bindsym $mod+k focus down
+bindsym $mod+l focus up
+bindsym $mod+odiaeresis focus right
 
 # move focused window
-bindsym $mod+Shift+H move left
-bindsym $mod+Shift+J move down
-bindsym $mod+Shift+K move up
-bindsym $mod+Shift+L move right
+bindsym $mod+Shift+j move left
+bindsym $mod+Shift+k move down
+bindsym $mod+Shift+l move up
+bindsym $mod+Shift+odiaeresis move right
 
 # split in horizontal orientation
 bindsym $mod+s split h
@@ -85,15 +85,15 @@ bindsym $mod+Shift+R restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Control+Mod1+E exit
 
-bindsym $mod+Control+Mod1+l resize grow     width   1 px or 1 ppt
-bindsym $mod+Control+Mod1+h resize shrink   width   1 px or 1 ppt
-bindsym $mod+Control+Mod1+k resize grow     height  1 px or 1 ppt
-bindsym $mod+Control+Mod1+j resize shrink   height  1 px or 1 ppt
+bindsym $mod+Control+Mod1+j resize shrink   width   1 px or 1 ppt
+bindsym $mod+Control+Mod1+k resize shrink   height  1 px or 1 ppt
+bindsym $mod+Control+Mod1+l resize grow     height  1 px or 1 ppt
+bindsym $mod+Control+Mod1+odiaeresis resize grow     width   1 px or 1 ppt
 
-bindsym $mod+Mod1+l resize grow     width   5 px or 5 ppt
-bindsym $mod+Mod1+h resize shrink   width   5 px or 5 ppt
-bindsym $mod+Mod1+k resize grow     height  5 px or 5 ppt
-bindsym $mod+Mod1+j resize shrink   height  5 px or 5 ppt
+bindsym $mod+Mod1+j resize shrink   width   5 px or 5 ppt
+bindsym $mod+Mod1+k resize shrink   height  5 px or 5 ppt
+bindsym $mod+Mod1+l resize grow     height  5 px or 5 ppt
+bindsym $mod+Mod1+odiaeresis resize grow     width   5 px or 5 ppt
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -120,7 +120,7 @@ bindsym $mod+period scratchpad show
 exec feh --bg-scale ~/.i3/bg.png
 
 # Move windows between monitors
-bindsym $mod+Control+Shift+h move workspace to output left
-bindsym $mod+Control+Shift+j move workspace to output down
-bindsym $mod+Control+Shift+k move workspace to output up
-bindsym $mod+Control+Shift+l move workspace to output right
+bindsym $mod+Control+Shift+j move workspace to output left
+bindsym $mod+Control+Shift+k move workspace to output down
+bindsym $mod+Control+Shift+l move workspace to output up
+bindsym $mod+Control+Shift+odiaeresis move workspace to output right
