--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -3,16 +3,23 @@ general {
         interval = 1
 }
 
-#order += "volume master"
+order += "battery 0"
+order += "volume master"
 order += "disk /"
 order += "ethernet eno1"
+order += "wireless wlp3s0"
 order += "load"
 order += "time"
 
 ethernet eno1 {
     # if you use %speed, i3status requires root privileges
     format_up = "E: %ip (%speed)"
-    format_down = "E: down"
+    format_down = ""
+}
+
+wireless wlp3s0 {
+    format_up = "W: (%quality at %essid, %bitrate) %ip"
+    format_down = "W: down"
 }
 
 time {
@@ -27,9 +34,19 @@ disk "/" {
     format = "%free"
 }
 
-#volume master {
-#    format = "♪: %volume"
-#    device = "default"
-#    mixer = "Master"
-#    mixer_idx = 0
-#}
+volume master {
+    format = "♪: %volume"
+    device = "default"
+    mixer = "Master"
+    mixer_idx = 0
+}
+
+battery 0 {
+    format = "%status %percentage %remaining"
+    format_down = ""
+    status_chr = "CHR"
+    status_bat = ""
+    status_full = ""
+    path = "/sys/class/power_supply/BAT%d/uevent"
+    low_threshold = 10
+}
