--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -19,7 +19,7 @@ ethernet eno1 {
 
 wireless wlp3s0 {
     format_up = "W: (%quality at %essid, %bitrate) %ip"
-    format_down = "W: down"
+    format_down = ""
 }
 
 time {
