--- a/i3status.conf
+++ b/i3status.conf
@@ -1,52 +1,58 @@
 general {
-        colors = true
-        interval = 1
+  colors = true
+  interval = 1
 }
 
 order += "battery 0"
 order += "volume master"
 order += "disk /"
 order += "ethernet eno1"
-order += "wireless wlp3s0"
+order += "wireless wlp4s0"
+order += "wireless wwp0s20f0u6i12"
 order += "load"
 order += "time"
 
 ethernet eno1 {
-    # if you use %speed, i3status requires root privileges
-    format_up = "E: %ip (%speed)"
-    format_down = ""
+  # if you use %speed, i3status requires root privileges
+  format_up = "E: %ip (%speed)"
+  format_down = ""
 }
 
-wireless wlp3s0 {
-    format_up = "W: (%quality at %essid, %bitrate) %ip"
-    format_down = ""
+wireless wlp4s0 {
+  format_up = "WLAN: %ip"
+  format_down = ""
+}
+
+wireless wwp0s20f0u6i12 {
+  format_up = "LTE: %ip"
+  format_down = ""
 }
 
 time {
-    format = "w%V %Y-%m-%d %H:%M:%S"
+  format = "w%V %Y-%m-%d %H:%M:%S"
 }
 
 load {
-    format = "%1min"
+  format = "%1min"
 }
 
 disk "/" {
-    format = "%free"
+  format = "%free"
 }
 
 volume master {
-    format = "♪: %volume"
-    device = "default"
-    mixer = "Master"
-    mixer_idx = 0
+  format = "♪: %volume"
+  device = "default"
+  mixer = "Master"
+  mixer_idx = 0
 }
 
 battery 0 {
-    format = "%status %percentage %remaining"
-    format_down = ""
-    status_chr = "CHR"
-    status_bat = ""
-    status_full = ""
-    path = "/sys/class/power_supply/BAT%d/uevent"
-    low_threshold = 10
+  format = "%status %percentage %remaining"
+  format_down = ""
+  status_chr = "CHR"
+  status_bat = "BAT"
+  status_full = "FULL"
+  path = "/sys/class/power_supply/BAT%d/uevent"
+  low_threshold = 10
 }
