--- a/coc-settings.json
+++ b/coc-settings.json
@@ -20,5 +20,8 @@
   "typescript.preferences.importModuleSpecifier": "relative",
   "javascript.preferences.importModuleSpecifier": "relative",
   "list.insertMappings": {
-  }
+  },
+  "typescript.suggest.completeFunctionCalls": false,
+  "javascript.suggest.completeFunctionCalls": false,
+  "codeLens.enable": true
 }
