--- a/i3status.conf
+++ b/i3status.conf
@@ -3,6 +3,9 @@ general {
   interval = 1
 }
 
+order += "imap gmail"
+order += "imap hedman"
+order += "imap playipp"
 order += "battery 0"
 order += "volume master"
 order += "disk /"
@@ -11,6 +14,38 @@ order += "wireless wlp4s0"
 order += "wireless wwp0s20f0u6i12"
 order += "load"
 order += "time"
+
+imap gmail {
+    imap_server = 'imap.gmail.com'
+    mailbox = 'INBOX'
+    password = shell(cat ~/.secrets/gmail)
+    port = '993'
+    user = 'jakob.hedman@gmail.com'
+    format = 'Gmail: {unseen}'
+    hide_if_zero = True
+}
+
+imap hedman {
+    cache_timeout = 30
+    imap_server = 'imap.gmail.com'
+    mailbox = 'INBOX'
+    password = shell(cat ~/.secrets/hedman)
+    port = '993'
+    user = 'jake@hedman.email'
+    format = 'Hedman: {unseen}'
+    hide_if_zero = True
+}
+
+imap playipp {
+    cache_timeout = 30
+    imap_server = 'imap.gmail.com'
+    mailbox = 'INBOX'
+    password = shell(cat ~/.secrets/playipp)
+    port = '993'
+    user = 'jakob.hedman@playipp.com'
+    format = 'Playipp: {unseen}'
+    hide_if_zero = True
+}
 
 ethernet eno1 {
   # if you use %speed, i3status requires root privileges
@@ -21,6 +56,7 @@ ethernet eno1 {
 wireless wlp4s0 {
   format_up = "WLAN: %ip"
   format_down = ""
+  color_good = None
 }
 
 wireless wwp0s20f0u6i12 {
