mimi as xdg-open

--- a/aerc/binds.conf
+++ b/aerc/binds.conf
@@ -66,6 +66,7 @@ K = :next<Enter>
 L = :prev<Enter>
 
 b = :pipe -b chromecat<Enter>
+o = :open<Enter>
 
 [compose]
 # Keybindings used when the embedded terminal is not selected in the compose
