--- a/aerc/accounts.conf
+++ b/aerc/accounts.conf
@@ -4,8 +4,8 @@ outgoing = smtp+plain://jakob.hedman%40gmail.com@smtp.gmail.com:587
 default = INBOX
 smtp-starttls = yes
 from = Jake Hedman <jakob.hedman@gmail.com>
-source-cred-cmd = cat ~/.secrets/gmail
-outgoing-cred-cmd = cat ~/.secrets/gmail
+source-cred-cmd = pass email/gmail
+outgoing-cred-cmd = pass email/gmail
 
 [Hedman]
 source = imaps://jake%40hedman.email@imap.gmail.com:993
@@ -13,8 +13,8 @@ outgoing = smtp+plain://jake%40hedman.email@smtp.gmail.com:587
 default = INBOX
 smtp-starttls = yes
 from = Jake Hedman <jake@hedman.email>
-source-cred-cmd = cat ~/.secrets/hedman
-outgoing-cred-cmd = cat ~/.secrets/hedman
+source-cred-cmd = pass email/hedman
+outgoing-cred-cmd = pass email/hedman
 
 [Playipp]
 source        = imaps://jakob.hedman%40playipp.com@imap.gmail.com:993
@@ -22,5 +22,5 @@ outgoing      = smtp+plain://jakob.hedman%40playipp.com@smtp.gmail.com:587
 default       = INBOX
 smtp-starttls = yes
 from          = Jake Hedman <jakob.hedman@playipp.com>
-source-cred-cmd = cat ~/.secrets/playipp
-outgoing-cred-cmd = cat ~/.secrets/playipp
+source-cred-cmd = pass email/playipp
+outgoing-cred-cmd = pass email/playipp
