--- a/i3status.conf
+++ b/i3status.conf
@@ -18,7 +18,7 @@ order += "time"
 imap gmail {
     imap_server = 'imap.gmail.com'
     mailbox = 'INBOX'
-    password = shell(cat ~/.secrets/gmail)
+    password = shell(pass email/gmail)
     port = '993'
     user = 'jakob.hedman@gmail.com'
     format = 'Gmail: {unseen}'
@@ -29,7 +29,7 @@ imap hedman {
     cache_timeout = 30
     imap_server = 'imap.gmail.com'
     mailbox = 'INBOX'
-    password = shell(cat ~/.secrets/hedman)
+    password = shell(pass email/hedman)
     port = '993'
     user = 'jake@hedman.email'
     format = 'Hedman: {unseen}'
@@ -40,7 +40,7 @@ imap playipp {
     cache_timeout = 30
     imap_server = 'imap.gmail.com'
     mailbox = 'INBOX'
-    password = shell(cat ~/.secrets/playipp)
+    password = shell(pass email/playipp)
     port = '993'
     user = 'jakob.hedman@playipp.com'
     format = 'Playipp: {unseen}'
