--- a/mime.conf
+++ b/mime.conf
@@ -1,7 +1,7 @@
-text/html: google-chrome-stable
+text/html: qutebrowser
 image/: feh
 text/: termite -e nvim
 video/: mpv
 audio/: mpv
-http: google-chrome-stable
-https: google-chrome-stable
+http: qutebrowser
+https: qutebrowser
