--- a/i3status.conf
+++ b/i3status.conf
@@ -3,6 +3,9 @@ general {
   interval = 1
 }
 
+order += "git_status dotfiles"
+order += "git_status secrets"
+order += "git_status pass"
 order += "imap gmail"
 order += "imap hedman"
 order += "imap playipp"
@@ -14,6 +17,21 @@ order += "wireless wlp4s0"
 order += "wireless wwp0s20f0u6i12"
 order += "load"
 order += "time"
+
+git_status dotfiles {
+  path = '~/dotfiles'
+  name = 'dotfiles'
+}
+
+git_status secrets {
+  path = '~/secrets'
+  name = 'secrets'
+}
+
+git_status pass {
+  path = '~/.password-store'
+  name = 'pass'
+}
 
 imap gmail {
     imap_server = 'imap.gmail.com'
