--- a/i3status.conf
+++ b/i3status.conf
@@ -3,6 +3,8 @@ general {
   interval = 1
 }
 
+order += "arch_updates"
+order += "github"
 order += "git_status dotfiles"
 order += "git_status secrets"
 order += "git_status pass"
@@ -17,6 +19,20 @@ order += "wireless wlp4s0"
 order += "wireless wwp0s20f0u6i12"
 order += "load"
 order += "time"
+
+arch_updates {
+  hide_if_zero = True
+  color = '#ffffff'
+}
+
+github {
+  username = 'JakeHedman'
+  format = '{notifications}'
+  format_notifications = 'Github {notifications_count}'
+  auth_token = shell(pass api/github_py3status)
+  allow_urgent = False
+  color = '#ffff00'
+}
 
 git_status dotfiles {
   path = '~/dotfiles'
@@ -108,5 +124,6 @@ battery 0 {
   status_bat = "BAT"
   status_full = "FULL"
   path = "/sys/class/power_supply/BAT%d/uevent"
-  low_threshold = 10
+  threshold_type = "time"
+  low_threshold = 30
 }
