--- a/i3status.conf
+++ b/i3status.conf
@@ -10,7 +10,7 @@ order += "git_status secrets"
 order += "git_status pass"
 order += "imap gmail"
 order += "imap hedman"
-order += "imap playipp"
+#order += "imap playipp"
 order += "battery 0"
 order += "volume master"
 order += "disk /"
