--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,5 @@
 {
+  "css.enable": true,
   "suggest.triggerAfterInsertEnter": true,
   "suggest.noselect": false,
   "suggest.snippetIndicator": "►",
@@ -24,5 +25,6 @@
   "typescript.suggest.completeFunctionCalls": false,
   "javascript.suggest.completeFunctionCalls": false,
   "codeLens.enable": false,
-  "tsserver.log": "normal"
+  "tsserver.log": "normal",
+  "snippets.textmateSnippetsRoots": ["/home/jake/connect/web/.vscode"]
 }
