pass new and stuff

--- a/i3status.conf
+++ b/i3status.conf
@@ -8,8 +8,8 @@ order += "github"
 order += "git_status dotfiles"
 order += "git_status secrets"
 order += "git_status pass"
-order += "imap gmail"
-order += "imap hedman"
+#order += "imap gmail"
+#order += "imap hedman"
 #order += "imap playipp"
 order += "battery 0"
 order += "volume master"
@@ -67,17 +67,6 @@ imap hedman {
     port = '993'
     user = 'jake@hedman.email'
     format = 'Hedman: {unseen}'
-    hide_if_zero = True
-}
-
-imap playipp {
-    cache_timeout = 30
-    imap_server = 'imap.gmail.com'
-    mailbox = 'INBOX'
-    password = shell(pass email/playipp)
-    port = '993'
-    user = 'jakob.hedman@playipp.com'
-    format = 'Playipp: {unseen}'
     hide_if_zero = True
 }
 
