--- a/mime.conf
+++ b/mime.conf
@@ -1,7 +1,11 @@
-text/html: qutebrowser
+text/html: google-chrome-stable
 image/: feh
 text/: termite -e nvim
 video/: mpv
 audio/: mpv
-http: qutebrowser
-https: qutebrowser
+http: google-chrome-stable
+https: google-chrome-stable
+screen: screen-desktop
+postman: postman
+slack: slack
+discord: discord
