--- a/i3status.conf
+++ b/i3status.conf
@@ -15,6 +15,7 @@ order += "battery 0"
 order += "volume master"
 order += "disk /"
 order += "ethernet eno1"
+order += "ethernet enp7s0"
 order += "wireless wlp4s0"
 order += "wireless wwp0s20f0u6i12"
 order += "load"
@@ -70,8 +71,12 @@ imap hedman {
     hide_if_zero = True
 }
 
+ethernet enp7s0 {
+  format_up = "E: %ip (%speed)"
+  format_down = ""
+}
+
 ethernet eno1 {
-  # if you use %speed, i3status requires root privileges
   format_up = "E: %ip (%speed)"
   format_down = ""
 }
@@ -79,7 +84,6 @@ ethernet eno1 {
 wireless wlp4s0 {
   format_up = "WLAN: %ip"
   format_down = ""
-  color_good = None
 }
 
 wireless wwp0s20f0u6i12 {
@@ -114,5 +118,5 @@ battery 0 {
   status_full = "FULL"
   path = "/sys/class/power_supply/BAT%d/uevent"
   threshold_type = "time"
-  low_threshold = 30
+  low_threshold = 60
 }
