Disable email status for now

--- a/i3status.conf
+++ b/i3status.conf
@@ -50,26 +50,26 @@ git_status pass {
   name = 'pass'
 }
 
-imap gmail {
-    imap_server = 'imap.gmail.com'
-    mailbox = 'INBOX'
-    password = shell(pass email/gmail)
-    port = '993'
-    user = 'jakob.hedman@gmail.com'
-    format = 'Gmail: {unseen}'
-    hide_if_zero = True
-}
+# imap gmail {
+#     imap_server = 'imap.gmail.com'
+#     mailbox = 'INBOX'
+#     password = shell(pass email/gmail)
+#     port = '993'
+#     user = 'jakob.hedman@gmail.com'
+#     format = 'Gmail: {unseen}'
+#     hide_if_zero = True
+# }
 
-imap hedman {
-    cache_timeout = 30
-    imap_server = 'imap.gmail.com'
-    mailbox = 'INBOX'
-    password = shell(pass email/hedman)
-    port = '993'
-    user = 'jake@hedman.email'
-    format = 'Hedman: {unseen}'
-    hide_if_zero = True
-}
+# imap hedman {
+#     cache_timeout = 30
+#     imap_server = 'imap.gmail.com'
+#     mailbox = 'INBOX'
+#     password = shell(pass email/hedman)
+#     port = '993'
+#     user = 'jake@hedman.email'
+#     format = 'Hedman: {unseen}'
+#     hide_if_zero = True
+# }
 
 ethernet enp7s0 {
   format_up = "E: %ip (%speed)"
