--- a/oni2/configuration.json
+++ b/oni2/configuration.json
@@ -8,18 +8,19 @@
   "editor.indentSize": 2,
   "editor.insertSpaces": true,
   "editor.lineNumbers": "on",
+  "oni.layout.layoutTabPosition": "top",
   "editor.matchBrackets": true,
   "editor.minimap.enabled": true,
   "editor.minimap.maxColumn": 100,
   "editor.minimap.showSlider": true,
   "editor.renderIndentGuides": true,
   "editor.renderWhitespace": "none",
-  "editor.rulers": [ 50, 72, 80, 100 ],
+  "editor.rulers": [50, 72, 80, 100],
   "editor.tabSize": 2,
   "editor.zenMode.hideTabs": true,
   "editor.zenMode.singleFile": true,
   "explorer.autoReveal": false,
-  "files.exclude": [ "_esy", "node_modules", ".git" ],
+  "files.exclude": ["_esy", "node_modules", ".git"],
   "workbench.activityBar.visible": false,
   "workbench.editor.showTabs": true,
   "workbench.iconTheme": "vs-seti",
@@ -27,14 +28,18 @@
   "workbench.statusBar.visible": true,
   "workbench.tree.indent": 2,
   "vim.useSystemClipboard": true,
+  "oni.layout.singleTabMode": true,
   "editor.autoClosingBrackets": "never",
   "vim.leader": ",",
   "experimental.viml": [
-    "noremap ö l", "noremap l k", "noremap k j", "noremap j h",
-    "nnoremap <silent> <Leader>l :nohl<CR>", "set ignorecase",
+    "noremap ö l",
+    "noremap l k",
+    "noremap k j",
+    "noremap j h",
+    "nnoremap <silent> <Leader>l :nohl<CR>",
+    "set ignorecase",
     "set smartcase",
     "nnoremap <leader>t <Esc>:tabnew<CR>"
-
   ],
   "editor.cursorSurroundingLines": 10
 }
