--- a/coc-settings.json
+++ b/coc-settings.json
@@ -11,7 +11,8 @@
     "typescriptreact",
     "css",
     "json",
-    "Markdown"
+    "Markdown",
+    "c"
   ],
   "eslint.filetypes": [
     "javascript",
@@ -27,5 +28,6 @@
   "javascript.suggest.completeFunctionCalls": false,
   "codeLens.enable": false,
   "tsserver.log": "normal",
-  "snippets.textmateSnippetsRoots": ["/home/jake/connect/web/.vscode", "/home/jake/oc/.vscode"]
+  "snippets.textmateSnippetsRoots": ["/home/jake/connect/web/.vscode", "/home/jake/oc/.vscode"],
+  "clangd.inlayHints.enable": false
 }
