--- a/mpv.conf
+++ b/mpv.conf
@@ -2,3 +2,4 @@ screenshot-template="%F-%wHh%wMm%wSs"
 screenshot-format="png"
 screenshot-directory="~/mpv_screenshots"
 deinterlace="no"
+osd-status-msg=${playback-time/full} / ${duration} (${percent-pos}%)\nframe: ${estimated-frame-number} / ${estimated-frame-count}
