--- a/oni2/configuration.json
+++ b/oni2/configuration.json
@@ -1,5 +1,5 @@
 {
-  "ui.zoom": 1.0,
+  "ui.zoom": 1.7999999999999998,
   "editor.detectIndentation": true,
   "editor.fontFamily": "Hack",
   "editor.fontSize": 16,
@@ -15,12 +15,12 @@
   "editor.minimap.showSlider": true,
   "editor.renderIndentGuides": true,
   "editor.renderWhitespace": "none",
-  "editor.rulers": [50, 72, 80, 100],
+  "editor.rulers": [ 50, 72, 80, 100 ],
   "editor.tabSize": 2,
   "editor.zenMode.hideTabs": true,
   "editor.zenMode.singleFile": true,
   "explorer.autoReveal": false,
-  "files.exclude": ["_esy", "node_modules", ".git"],
+  "files.exclude": [ "_esy", "node_modules", ".git" ],
   "workbench.activityBar.visible": false,
   "workbench.editor.showTabs": true,
   "workbench.iconTheme": "vs-seti",
@@ -32,14 +32,12 @@
   "editor.autoClosingBrackets": "never",
   "vim.leader": ",",
   "experimental.viml": [
-    "noremap ö l",
-    "noremap l k",
-    "noremap k j",
-    "noremap j h",
-    "nnoremap <silent> <Leader>l :nohl<CR>",
-    "set ignorecase",
-    "set smartcase",
-    "nnoremap <leader>t <Esc>:tabnew<CR>"
+    "noremap ö l", "noremap l k", "noremap k j", "noremap j h",
+    "nnoremap <silent> <Leader>l :nohl<CR>", "set ignorecase",
+    "set smartcase", "nnoremap <leader>t <Esc>:tabnew<CR>"
   ],
-  "editor.cursorSurroundingLines": 10
+  "editor.cursorSurroundingLines": 10,
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
