--- a/i3status.conf
+++ b/i3status.conf
@@ -3,7 +3,7 @@ general {
   interval = 1
 }
 
-order += "arch_updates"
+# order += "arch_updates"
 order += "github"
 order += "git_status dotfiles"
 order += "git_status secrets"
@@ -21,34 +21,34 @@ order += "wireless wwp0s20f0u6i12"
 order += "load"
 order += "time"
 
-arch_updates {
-  hide_if_zero = True
-  color = '#ffffff'
-}
+# arch_updates {
+#   hide_if_zero = True
+#   color = '#ffffff'
+# }
 
-github {
-  username = 'JakeHedman'
-  format = '{notifications}'
-  format_notifications = 'Github {notifications_count}'
-  auth_token = shell(pass api/github_py3status)
-  allow_urgent = False
-  color = '#ffff00'
-}
+# github {
+#   username = 'JakeHedman'
+#   format = '{notifications}'
+#   format_notifications = 'Github {notifications_count}'
+#   auth_token = shell(pass api/github_py3status)
+#   allow_urgent = False
+#   color = '#ffff00'
+# }
 
-git_status dotfiles {
-  path = '~/dotfiles'
-  name = 'dotfiles'
-}
+# git_status dotfiles {
+#   path = '~/dotfiles'
+#   name = 'dotfiles'
+# }
 
-git_status secrets {
-  path = '~/secrets'
-  name = 'secrets'
-}
+# git_status secrets {
+#   path = '~/secrets'
+#   name = 'secrets'
+# }
 
-git_status pass {
-  path = '~/.password-store'
-  name = 'pass'
-}
+# git_status pass {
+#   path = '~/.password-store'
+#   name = 'pass'
+# }
 
 # imap gmail {
 #     imap_server = 'imap.gmail.com'
