hx for text files

--- a/mime.conf
+++ b/mime.conf
@@ -1,6 +1,6 @@
 text/html: google-chrome-stable
 image/: feh
-text/: termite -e nvim
+text/: alacritty -e hx
 video/: mpv
 audio/: mpv
 http: google-chrome-stable
