--- a/mime.conf
+++ b/mime.conf
@@ -1,3 +1,4 @@
+pdf: inkscape
 text/html: google-chrome-stable
 image/: feh
 text/: alacritty -e hx
@@ -17,3 +18,4 @@ vscode: code
 obsidian: obsidian
 figma: figma-linux
 application/pdf: inkscape
+ai: inkscape
